# for display continuity sake please use 2 spaces instead of tabs

2015-03-15 Giuseppe Aruta (ma15569) 
  * Add RasterImageIOUtils.class, with various methods to perform
    some raster image  Input/Output operations

2015-03-14 mmichaud <m.michael.michaud@orange.fr>
  * Manage new attribute types BOOLEAN and LONG in jml and shp drivers
    (also manage other datatypes so that they can be written as one
    of the well-known datatype instead of throwing an error message)

2015-02-28 mmichaud <m.michael.michaud@orange.fr>
  * FR 215 : don't open a new ViewAttributesFrame if there is already one
    open for the selected layer Layer

2015-02-28 mmichaud <m.michael.michaud@orange.fr>
  * Fix bug #388 shrinking columns in infoFrame and attributeTable
    when the schema has changed.

2015_02_22 Giuseppe Aruta (ma15569) 
	- Add 2 new plugin to manage nodata values on monoband DEM
		a) Change No Data Value: it changes default nodata value of file
		b) Set input value to no dta;: it changes an arbitrary cell value to
		   default nodata

2015_02_22 Giuseppe Aruta (ma15569) 
	- Add new Compare Raster Grid layers to Raster plugins

2015_01_24 Giuseppe Aruta (ma15569) 
	- RasterQueryPlugIn. Fix minor bug on lower panel

2015-02-23 mmichaud <m.michael.michaud@orange.fr>
    - Fix Save dataset as Postgis Table (insert all Features as New Rows)

2015_01_24 Giuseppe Aruta (ma15569) - RasterQueryPlugIn
	- Extended inspection to multiband raster layers. 
	- Multiple measure are now displayed (and saved) by default. 
	  Press SHIFT to cancel previous and display only last measure. 
	- Moving cursor on image shows raster cell value on lower panel

2015-02-02 Nicolas Ribot (elnico)
  * removed Oracle spatial stuff due to dependencies problems

2015-02-02 Nicolas Ribot (elnico)
  * Added very first version of Oracle Spatial Support in Data Store Layer Wizard:
    Based on Geotools gt2-oracle-spatial.jar to load geometry from ORA structure efficiently.
    Current features: 